--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="splash_screen_title">APEX LEGENDS tracker</string>
     <string name="user_profile">Profile</string>
+    <string name="label_no_heroes_added_yet">No Heroes added yet</string>
 </resources>
