--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="loading_pls_wait">Loading please wait</string>
     <string name="action_exit_profile">Exit</string>
+    <string name="action_share">Share</string>
     
 </resources>
